// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Tab component 1`] = `
<div>
  <div
    aria-controls="tab1-panel"
    aria-selected="true"
    class="tab display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md"
    id="tab1-tab"
    role="tab"
    tabindex="0"
  >
    Tab 1
  </div>
</div>
`;

exports[`renders the Tab component with default tab 2 selected 1`] = `
<div>
  <div
    aria-controls="tab1-panel"
    aria-selected="false"
    class="tab display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md"
    id="tab1-tab"
    role="tab"
    tabindex="-1"
  >
    Tab 1
  </div>
</div>
`;
